--- a/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
@@ -40,7 +40,9 @@
         <!--#endif-->
         <!--#if (Net8OrLater)-->
         <PackageVersion Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+        <!--#if (Net8)-->
         <PackageVersion Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+        <!--#endif-->
         <!--#if (AddMauiToolkit)-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="9.0.2" />
         <!--#endif-->
