--- a/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
@@ -86,7 +86,9 @@
         <!--#if (CentralPkgMgmt)-->
         <!--#if (Net8OrLater)-->
         <PackageReference Include="Microsoft.Maui.Controls" />
+        <!--#if (Net8)-->
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" />
+        <!--#endif-->
         <!--#endif-->
         <!--#if (AddMauiMaps)-->
         <PackageReference Include="Microsoft.Maui.Controls.Maps" />
@@ -100,7 +102,9 @@
         <!--#else-->
         <!--#if (Net8OrLater)-->
         <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+        <!--#if (Net8)-->
         <PackageReference Include="Microsoft.Maui.Controls.Compatibility" Version="$(MauiVersion)" />
+        <!--#endif-->
         <!--#if (AddMauiToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
         <!--#endif-->
