Support for XML-based solution file (slnx) #249

--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
@@ -180,6 +180,9 @@
 
     <ItemGroup>
         <None Remove="SAFE-NAME.code-workspace" />
+        <!--#if (UseSlnx)-->
+        <None Remove="SAFE-NAME.slnx" />
+        <!--#endif-->
         <!--#if (Net8 || CentralPkgMgmt)-->
         <None Remove="Directory.Packages.props" />
         <!--#endif-->
