--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -254,6 +254,9 @@
     <ItemGroup>
         <!--#if (Plain)-->
         <None Remove="SAFE-NAME.code-workspace" />
+        <!--#if (UseSlnx)-->
+        <None Remove="SAFE-NAME.slnx" />
+        <!--#endif-->
         <!--#endif-->
         <!--#if (Net8 || CentralPkgMgmt)-->
         <None Remove="Directory.Packages.props" />
