--- a/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/SharedClassLib/SharedClassLib.1.csproj
@@ -30,10 +30,13 @@
         <None Include="**\*.forms.cs" />
     </ItemGroup>
 
-    <!--#if (!no-solution-file || Net8 || CentralPkgMgmt)-->
+    <!--#if (SolnFile || Net8 || CentralPkgMgmt)-->
     <ItemGroup>
-        <!--#if (!no-solution-file)-->
-        <None Remove="SharedClassLib.1.code-workspace" />
+        <!--#if (SolnFile)-->
+        <None Remove="SAFE-NAME.code-workspace" />
+        <!--#endif-->
+        <!--#if (SolnFile && UseSlnx)-->
+        <None Remove="SAFE-NAME.slnx" />
         <!--#endif-->
         <!--#if (Net8 || CentralPkgMgmt)-->
         <None Remove="Directory.Packages.props" />
