--- a/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/SharedClassLib/Directory.Packages.props
@@ -4,9 +4,9 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net8)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.90-ci.net8.24414.1</MauiVersion>
+        <MauiVersion>8.0.99-ci.net8.24462.6</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.80</MauiVersion>
+        <MauiVersion>8.0.82</MauiVersion>
         <!--#endif-->
         <!--#endif-->
         <!--#else-->
@@ -51,7 +51,7 @@
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <!--#if (Net9)-->
-        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.0.0-preview.5" />
+        <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="4.0.0-rc.1" />
         <!--#else-->
         <PackageVersion Include="VijayAnand.Toolkit.Markup" Version="3.5.0" />
         <!--#endif-->
@@ -81,7 +81,7 @@
         <PackageVersion Include="Microsoft.Maui.Controls.Maps" Version="$(MauiVersion)" />
         <!--#endif-->
         <!--#if (AddMvvmToolkit)-->
-        <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.2.2" />
+        <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.3.1" />
         <!--#endif-->
     </ItemGroup>
     <!--#endif-->
