Templates updated for .NET MAUI 9 RC2 #265

--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.csproj
@@ -110,7 +110,7 @@
         <!--#if (Unpackaged)-->
         <WindowsPackageType>None</WindowsPackageType>
         <!--#endif-->
-        <!--#if (AddMvvmToolkit)-->
+        <!--#if ((AllPlatforms || IsWindows) && AddMvvmToolkit)-->
         <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
         <!--#endif-->
 
