--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -109,7 +109,7 @@
         <LangVersion>latest</LangVersion>
         <ImplicitUsings>enable</ImplicitUsings>
         <RootNamespace>MauiApp._1</RootNamespace>
-        <!--#if (AddMvvmToolkit)-->
+        <!--#if ((AllPlatforms || IsWindows) && AddMvvmToolkit)-->
         <WindowsSdkPackageVersion>10.0.19041.38</WindowsSdkPackageVersion>
         <!--#endif-->
         <DisableImplicitFSharpCoreReference>true</DisableImplicitFSharpCoreReference>
