Support for Syncfusion.Maui.Toolkit NuGet package #268

--- a/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.MauiLib/MauiApp.1.MauiLib.csproj
+++ b/src/MauiTemplatesCLI/MauiAppCS/MauiApp.1.MauiLib/MauiApp.1.MauiLib.csproj
@@ -62,6 +62,9 @@
         <!--#if (AddToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" />
         <!--#endif-->
+        <!--#if (AddSyncfusionToolkit)-->
+        <PackageReference Include="Syncfusion.Maui.Toolkit" />
+        <!--#endif-->
         <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" />
         <!--#endif-->
@@ -123,6 +126,9 @@
         <!--#endif-->
         <!--#if (AddToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
+        <!--#endif-->
+        <!--#if (AddSyncfusionToolkit)-->
+        <PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.*" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
