--- a/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
+++ b/src/MauiTemplatesCLI/MauiAppCS/Directory.Packages.props
@@ -4,9 +4,9 @@
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
         <!--#if (Net8)-->
         <!--#if (Nightly)-->
-        <MauiVersion>8.0.99-ci.net8.24509.1</MauiVersion>
+        <MauiVersion>8.0.99-ci.net8.24518.4</MauiVersion>
         <!--#else-->
-        <MauiVersion>8.0.91</MauiVersion>
+        <MauiVersion>8.0.92</MauiVersion>
         <!--#endif-->
         <!--#endif-->
         <!--#else-->
@@ -77,14 +77,17 @@
         <!--#if (AddToolkit)-->
         <PackageVersion Include="CommunityToolkit.Maui" Version="9.1.0" />
         <!--#endif-->
+        <!--#if (AddSyncfusionToolkit)-->
+        <PackageVersion Include="Syncfusion.Maui.Toolkit" Version="1.0.1" />
+        <!--#endif-->
         <!--#if (AddMarkup)-->
-        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.1.0" />
+        <PackageVersion Include="CommunityToolkit.Maui.Markup" Version="4.2.0" />
         <!--#endif-->
         <!--#if (AddCamera)-->
         <PackageVersion Include="CommunityToolkit.Maui.Camera" Version="1.0.5" />
         <!--#endif-->
         <!--#if (AddMedia)-->
-        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="4.1.1" />
+        <PackageVersion Include="CommunityToolkit.Maui.MediaElement" Version="4.1.2" />
         <!--#endif-->
         <!--#if (AddSharedToolkit)-->
         <!--#if (Net9)-->
@@ -126,10 +129,10 @@
         <!--#endif-->
         <!--#if (Reactor)-->
         <!--#if (Net8OrLater)-->
-        <PackageVersion Include="Reactor.Maui" Version="2.0.49" />
-        <PackageVersion Include="Reactor.Maui.Canvas" Version="2.0.49" />
+        <PackageVersion Include="Reactor.Maui" Version="2.0.51" />
+        <PackageVersion Include="Reactor.Maui.Canvas" Version="2.0.51" />
         <!--#if (AddMaps)-->
-        <PackageVersion Include="Reactor.Maui.Maps" Version="2.0.49" />
+        <PackageVersion Include="Reactor.Maui.Maps" Version="2.0.51" />
         <!--#endif-->
         <!--#else-->
         <PackageVersion Include="Reactor.Maui" Version="1.0.154" />
