--- a/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
+++ b/src/MauiTemplatesCLI/MauiAppFS/MauiApp.1.fsproj
@@ -314,6 +314,9 @@
         <!--#if (AddToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" />
         <!--#endif-->
+        <!--#if (AddSyncfusionToolkit)-->
+        <PackageReference Include="Syncfusion.Maui.Toolkit" />
+        <!--#endif-->
         <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" />
         <!--#endif-->
@@ -344,6 +347,9 @@
         <!--#endif-->
         <!--#if (AddToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
+        <!--#endif-->
+        <!--#if (AddSyncfusionToolkit)-->
+        <PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.*" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
