--- a/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
+++ b/src/MauiTemplatesCLI/MauiClassLib/MauiClassLib.1.csproj
@@ -191,6 +191,9 @@
         <!--#if (AddToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" />
         <!--#endif-->
+        <!--#if (AddSyncfusionToolkit)-->
+        <PackageReference Include="Syncfusion.Maui.Toolkit" />
+        <!--#endif-->
         <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" />
         <!--#endif-->
@@ -231,6 +234,9 @@
         <!--#endif-->
         <!--#if (AddToolkit)-->
         <PackageReference Include="CommunityToolkit.Maui" Version="9.*" />
+        <!--#endif-->
+        <!--#if (AddSyncfusionToolkit)-->
+        <PackageReference Include="Syncfusion.Maui.Toolkit" Version="1.*" />
         <!--#endif-->
         <!--#if (AddMarkup)-->
         <PackageReference Include="CommunityToolkit.Maui.Markup" Version="4.*" />
